# huace_driver

./: CMakeLists.txt  MsgNavInfoSignal.hpp  MsgRTK.hpp  README.md  gps_processing.cpp  gps_processing.h  main.cpp
lib/common/: CMakeLists.txt  nature.h
lib/common/coordinate_converter/: CMakeLists.txt  WGS84UTM.h  basic_coordinate_converter.cpp  basic_coordinate_converter.h  coordinate_converter.cpp  coordinate_converter.h
lib/common/nature/: CMakeLists.txt  angle.cpp  angle.h  angle_test.cpp  point.h  timestamp.cpp  timestamp.h  unit.h
